--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "sans-serif",
     "header": {
         "title": "Welcome",
-        "logo": "images/logo.svg",
+        "logo": "/images/2-tracks.svg",
         "logo_alt": "Event logo",
         "has_primary_nav": false,
         "has_secondary_nav": true,
